--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,117 @@
+.overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(0,0,0,0.8);
+  z-index: 998;
+}
+
 .card {
   box-shadow: 0px 2px 10px rgba(0,0,0,0.5);
+  position: fixed;
+  padding: 50px 100px 30px 100px;
+  background-color: #ecf0f1;
+  z-index: 999;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  top: 40%;
+  left: 50%;
+  margin-top: -134px;
+  margin-left: -310px;
+}
+
+.card p {
+  text-align:center;
+  margin-bottom:18px;
+  font-size:18px;
+  line-height:28px;
+  color: rgba(27, 27, 27, 0.59);
+  font-family:Roboto;
+  letter-spacing:3px;
+  text-transform:uppercase;
+}
+
+.close-button {
+  transition: all 0.5s ease;
+  position: absolute;
+  background-color: #111111;
+  padding: 1.5px 5px;
+  left: 0;
+  margin-left: -10px;
+  margin-top: -60px;
+  border-radius: 50%;
+  border: 2px solid #FFFFFF;
+  color: white;
+  -webkit-box-shadow: -4px -2px 6px 0px rgba(0,0,0,0.1);
+  -moz-box-shadow: -4px -2px 6px 0px rgba(0,0,0,0.1);
+  box-shadow: -3px 1px 6px 0px rgba(0,0,0,0.1);
+  text-decoration: none;
+}
+
+.close-button:hover {
+  cursor: pointer;
+  background-color: #D62246;
+  color: #fff;
+}
+
+
+.card .important {
+  text-transform: uppercase;
+  font-weight:bold;
+  font-style:Italic;
+  color:#D62246;
+  letter-spacing:4px;
+}
+
+.card .email-input {
+  width: 400px;
+  height: 20px;
+  background-color: #FFFFFF;
+  position:relative;
+  padding:10px;
+  border: 0;
+  font-size:17px;
+  color:rgba(0,0,0,0.6);
+  text-align: center;
+  &:focus{
+    outline:none;
+  }
+}
+
+.button-outline {
+  background-color: transparent;
+  padding: 10px 5px;
+  border: 2px #333333 solid;
+  color: #333333;
+  cursor: pointer;
+  font-family: "Montserrat", "helvetica neue", helvetica, arial, sans-serif;
+  font-size: .9em;
+  text-transform: uppercase;
+  transition: color 0.4s, background-color 0.4s;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
+  display: inline-block;
+  vertical-align: middle;
+  line-height: 1em;
+  outline: none;
+  text-align: center;
+  text-decoration: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  width: 100px;
+  margin-top: 18px;
+}
+
+.button-outline:hover, .button-outline:focus {
+  transition: color 0.4s, background-color 0.4s;
+  color: #FFFFFF;
+  text-decoration: none;
+  background-color: #333333;
 }
